# mlds6

./: .env.def  .gitignore  Makefile  README.md  pyproject.toml
digitallistening/database/: data_manager.py
digitallistening/models/: model.pkl  model.py
digitallistening/preprocessing/: dataset_preprocessing.py  text_preprocessing.py
digitallistening/training/: feature_extraction.py  model_training.py
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/modeling/: baseline_models.md  model_report.md
scripts/dashboard/: app.py
scripts/data_acquisition/: downloadFromGDrive.py
scripts/eda/: EDA.py  EDA_report.html  main.py
scripts/evaluation/: main.py
scripts/preprocessing/: main.py
scripts/training/: main.py
