[tool.poetry]
name = "digitalListening"
version = "0.1.0"
description = "Project template for data science projects"
authors = ["Juan Lara <julara@unal.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.4"
jupytext = "^1.13.2"
gdown = "^4.2.0"
pandas = "^1.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
